# brimo-master-app

./: CMakeLists.txt  Makefile  README.md  partitions_config.csv  sdkconfig.defaults
app/c_app/: CMakeLists.txt  Kconfig.projbuild  app_main.c
app/py_app/logging/: __init__.py
app/py_app/zimplistic_pyapp/: __init__.py  command_decoder.py  constants.py
main/: CMakeLists.txt  app_main.h
middleware/api/modbus_functions/: mbzpl_req_m.c  mbzpl_req_m.h  modbus_api.cmake
middleware/components/app_gui_mngr/: CMakeLists.txt  app_gui_mngr.c  app_gui_mngr.h  app_gui_mngr_ext.h  gui_common.h
middleware/components/app_gui_mngr/controls/: control_common.c  control_common.h  control_common_ext.h  notify_msgbox.c  notify_msgbox.h  progress_msgbox.c  progress_msgbox.h  query_msgbox.c  query_msgbox.h
middleware/components/app_gui_mngr/controls/resources/: img_error.c  img_info.c  img_system.c  img_warning.c
middleware/components/app_gui_mngr/fonts/: arial_96.c  arial_bold_18.c  wifi_symbol.c
middleware/components/app_gui_mngr/screens/: cam_screen.c  developer.c  menu.c  roti_making.c  screen_common.c  screen_common.h  screen_common_ext.h  splash.c  virtual_keyboard.c  virtual_keyboard.h  wifi_setting.c  x_making.c
middleware/components/app_gui_mngr/screens/docs/: roti_making.md
middleware/components/app_gui_mngr/screens/resources/: img_about.c  img_about.pdn  img_back.c  img_back.pdn  img_debug.c  img_debug.pdn  img_invisible.c  img_minus.c  img_minus.pdn  img_pause.c  img_pause.pdn  img_play.c  img_play.pdn  img_plus.c  img_plus.pdn  img_visible.c  img_wifi.c  img_wifi.pdn
middleware/components/app_micropy/: README.md
middleware/components/app_mqtt_mngr/: app_mqtt_mngr.c  tx_messages.c
middleware/components/app_ota_mngr/: CMakeLists.txt
middleware/components/app_wifi_mngr/: CMakeLists.txt  app_wifi_mngr.h  app_wifi_mngr_ext.h
middleware/components/common/: CMakeLists.txt  common_hdr.h
middleware/components/srvc_master_commander/: srvc_master_commander.c
middleware/components/srvc_micropy/: CMakeLists.txt  srvc_micropy.c  srvc_micropy.h
middleware/components/srvc_micropy/micropy/esp32/: help.c  machine_pin.c  modesp.c  modesp32.c  modesp32.h  modmachine.c  modmachine.h  modsocket.c  mp_port.c  mpconfigport.h  mphalport.c  mphalport.h
middleware/components/srvc_micropy/micropy/esp32/boards/: manifest.py  mpconfigboard.cmake
middleware/components/srvc_micropy/micropy/esp32/modules/: _start_itor3_pyapp.py  _start_webrepl.py  _start_webrepl_wss.py  _start_zimplistic_pyapp.py  inisetup.py
middleware/components/srvc_micropy/micropy/extmod/: extmod.cmake  vfs_lfsx.c
middleware/components/srvc_micropy/micropy/extmod/webrepl/: README.md  manifest.py  webrepl.py  websocket_helper.py
middleware/components/srvc_micropy/micropy/extmod/webrepl/Key/: SSL_certificate.der  SSL_certificate.pem  SSL_key.der  SSL_key.pem
middleware/components/srvc_micropy/micropy/extmod/webrepl/SSLWebREPL_Client/: websocket_client.py  ws_client_handshake.py  ws_protocol.py
middleware/components/srvc_micropy/micropy/py/: py.mk
middleware/components/srvc_micropy/modules/: cam.c  cam.h  cam_binding.c  cmp_queue.c  cmp_queue.h  cmp_queue_binding.c  gui.c  gui.h  gui_binding.c  ota.c  ota.h  ota_binding.c  param.c  param.h  param_binding.c  recovery.c  recovery.h  recovery_binding.c  ws_notify.c  ws_notify.h  ws_notify_binding.c
middleware/components/srvc_micropy/modules/docs/: gui.md  ota.md  param.md  ws_notify.md
middleware/components/srvc_recovery/: srvc_recovery.c  srvc_recovery.h
platform/components/app_mqtt_mngr/: CMakeLists.txt  app_mqtt_mngr.h  rx_messages.c
platform/components/app_ota_mngr/: README.md  app_ota_mngr.c  app_ota_mngr.h
platform/components/app_wifi_mngr/: app_wifi_mngr.c
platform/components/freemodbus/: CMakeLists.txt  Kconfig.projbuild  README.md
platform/components/freemodbus/FreeModbus/modbus/: mb.c  mb_m.c
platform/components/freemodbus/FreeModbus/modbus/include/: mb.h  mb_m.h  mbconfig.h  mbframe.h  mbport.h
platform/components/freemodbus/FreeModbus/modbus/zpl/: mbzpl.c  mbzpl.h  mbzpl_m.c
platform/components/freemodbus/FreeModbus/port/zpl_esp32/: port.h  portevent_m.c  portserial_m.c  porttimer_m.c
platform/components/freemodbus/FreeModbus/port/zpl_gd32/: port.c  port.h  portevent.c  portserial.c  porttimer.c
platform/components/srvc_fwu_esp32/: CMakeLists.txt  srvc_fwu_esp32.c  srvc_fwu_esp32.h
platform/components/srvc_fwu_slave/: CMakeLists.txt  srvc_fwu_slave.c  srvc_fwu_slave.h
platform/components/srvc_lvgl/: CMakeLists.txt  srvc_lvgl.c  srvc_lvgl.h
platform/components/srvc_master_commander/: CMakeLists.txt  srvc_master_commander.h
platform/components/srvc_master_datalink/: CMakeLists.txt  srvc_master_datalink.c  srvc_master_datalink.h
platform/components/srvc_master_transport/: CMakeLists.txt  srvc_master_transport.c  srvc_master_transport.h
platform/components/srvc_mqtt/: CMakeLists.txt  srvc_mqtt.c  srvc_mqtt.h  srvc_mqtt_ext.h
platform/components/srvc_param/: CMakeLists.txt  srvc_param.c  srvc_param.h  srvc_param_ext.h
platform/components/srvc_recovery/: CMakeLists.txt
platform/components/srvc_rt_log/: CMakeLists.txt  srvc_rt_log.c  srvc_rt_log.h
platform/components/srvc_wifi/: CMakeLists.txt  srvc_wifi.c  srvc_wifi.h
platform/components/srvc_ws_server/: CMakeLists.txt  srvc_ws_server.c  srvc_ws_server.h  srvc_ws_server_ext.h
platform/drivers/hwa_gpio/: CMakeLists.txt  hwa_gpio.c  hwa_gpio.h  hwa_gpio_ext.h
platform/drivers/srvc_cam/: CMakeLists.txt  Kconfig  srvc_cam.c  srvc_cam.h
platform/drivers/srvc_cam/conversions/: to_bmp.c
platform/drivers/srvc_cam/conversions/include/: img_converters.h
platform/drivers/srvc_cam/driver/: cam_hal.c  sccb.c
platform/drivers/srvc_io_tca9534/: CMakeLists.txt  srvc_io_tca9534.c  srvc_io_tca9534.h  srvc_io_tca9534_ext.h
platform/drivers/srvc_lcd_st7796s_demo/: CMakeLists.txt  Kconfig  srvc_lcd_st7796s_demo.c  srvc_lcd_st7796s_demo.h
platform/drivers/srvc_touch_gt911/: CMakeLists.txt  srvc_touch_gt911.c  srvc_touch_gt911.h
(+57 files in other folders)
