# Register the component
idf_component_register(
    SRCS
        # List of source files
    INCLUDE_DIRS
        # List of public include directories
        "."
    PRIV_INCLUDE_DIRS
        # List of private include directories
    REQUIRES
        # List of public required components
    PRIV_REQUIRES
        # List of private required components
)